--- a/templates/distributor/d_header.html
+++ b/templates/distributor/d_header.html
@@ -42,7 +42,7 @@
                 <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                     <div class="sb-sidenav-menu">
                         <div class="nav">
-                            <h6>Welcome, {{ user_name }}!</h6>
+                            <p class="text-center"><b>Welcome !<br> {{ user_name }}</b></p>
                             <div class="sb-sidenav-menu-heading">Core</div>
                             <a class="nav-link" href="{{ url_for('distributor.distributor_home')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="sb-sidenav-footer">
                         <div class="small">Logged in as:</div>
-                        Distributor
+                        {{ role }}
                     </div>
                 </nav>
             </div>
