--- a/templates/super_distributor/add_super_distributor.html
+++ b/templates/super_distributor/add_super_distributor.html
@@ -35,6 +35,13 @@
                     <input type="password" placeholder="Re-Enter Password*" required>
                 </div>
                 <br>
+                {% if role=='Manager' %}
+                <div class="sd-row">
+                    
+                    <input type="text"  placeholder="{{user_name}}" name="username" hidden>
+                    
+                </div>
+                {% else %}
                 <div class="sd-row">
                     <label for="manager">Select Manager:</label>
                     <select name="manager" id="manager" required>
@@ -44,6 +51,7 @@
                         {% endfor %}
                     </select>
                 </div>
+                {% endif %}
                 <br>
                 <div class="sd-buttons">
                     <button type="submit" class="sd-submit">Submit</button>
