--- a/templates/kitchen/all_kitchens.html
+++ b/templates/kitchen/all_kitchens.html
@@ -14,11 +14,7 @@
     <main>
         <div class="container-fluid px-4">
             <h2 class="text-center">Kitchens List</h2>
-            {% if role == 'Admin' %}
-            <p><b>Total Kitchens - {{kitchen_count}}</b></p>
-            {% else %}
 
-            {% endif %}
         <!-- Display flash messages for success or error -->
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -36,6 +32,7 @@
         <!-- Manager Cards -->
         <div class="row">
             {% for kitchen in all_kitchens %}
+            {% if kitchen.status == 'activated' %}
                 <div class="col-md-4 mb-4"> <!-- Added margin-bottom for spacing between cards -->
                     <div class="card manager-card">
                         <div class="card-body manager-card-body">
@@ -54,7 +51,6 @@
                                 <p class="card-text"><strong>Email:</strong> {{ kitchen.email }}</p>
                                 <p class="card-text"><strong>Contact:</strong> {{ kitchen.contact }}</p>
                                 <p class="card-text"><strong>Address:</strong> {{ kitchen.address }}</p>
-                                <p class="card-text"><strong>Distributor:</strong>{{kitchen.distributor.name}}</p>
                                 <!-- Action Buttons -->
                                 <div class="action-buttons">
                                     <a href="{{ url_for('kitchen.edit_kitchen', kitchen_id=kitchen.id) }}" class="btn btn-warning btn-sm">Edit</a>
@@ -64,8 +60,10 @@
                         </div>
                     </div>
                 </div>
+            {% endif %}
             {% endfor %}
         </div>
     </main>
 
-{% include 'admin/admin_footer.html' %}e
+{% include 'admin/admin_footer.html' %}
+
