--- a/templates/super_distributor/sd_all_distributor.html
+++ b/templates/super_distributor/sd_all_distributor.html
@@ -9,13 +9,8 @@
 <div id="layoutSidenav_content">
     <main>
         <div class="container-fluid px-4">
-            
             <h2 class="text-center">Super Distributors List</h2>
-            {% if role == 'Admin' %}
-            <p><b>Total SuperDistributor - {{super_distributor_count}}</b></p>
-            {% else %}
 
-            {% endif %}
         <!-- Display flash messages for success or error -->
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -33,6 +28,7 @@
         <!-- Manager Cards -->
         <div class="row">
             {% for sd in all_super_distributors %}
+            {% if sd.status == 'activated' %}
                 <div class="col-md-4 mb-4"> <!-- Added margin-bottom for spacing between cards -->
                     <div class="card manager-card">
                         <div class="card-body manager-card-body">
@@ -50,9 +46,7 @@
                                 <h5 class="card-title">{{ sd.name }}</h5>
                                 <p class="card-text"><strong>Email:</strong> {{ sd.email }}</p>
                                 <p class="card-text"><strong>Contact:</strong> {{ sd.contact }}</p>
-                                
-                                <!--<p class="card-text"><strong>Manager:</strong> {{ sd.manager.name }}</p>-->
-                                
+
                                 <!-- Action Buttons -->
                                 <div class="action-buttons">
                                     <a href="{{ url_for('super_distributor.edit_super_distributor', sd_id=sd.id ) }}" class="btn btn-warning btn-sm">Edit</a>
@@ -62,8 +56,10 @@
                         </div>
                     </div>
                 </div>
+            {% endif %}
             {% endfor %}
         </div>
     </main>
 
 {% include 'admin/admin_footer.html' %}
+
